fix footer background overflow

--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ h1 {
     align-items: center;
     justify-content: center;
     color: white;
-    background-color: black;
     bottom: 0;
     opacity: 50%;
 
